--- a/src/templates/problem/problemeditorial.html
+++ b/src/templates/problem/problemeditorial.html
@@ -4,7 +4,7 @@
 {% block active %}Practice{% endblock %}
 
 {% block preload %}
-<link rel="preload" href="/api/problem/editorial/{{ request.path.split('/')[2] }}" as="fetch" crossorigin="anonymous">
+<link rel="preload" href="/api/problem?id={{ request.path.split('/')[2] }}" as="fetch" crossorigin="anonymous">
 {% endblock %}
 
 {% block main %}
@@ -15,16 +15,20 @@
 <script>
     const problemId = "{{ request.path.split('/')[2] }}";
     const editorial = document.getElementById("editorial");
-    fetch("/api/problem/editorial/" + problemId).then(b => b.text())
-        .then(b => {
-                if (b.length > 0) {
-                    inject(editorial, b, false);
-                } else {
-                    editorial.innerHTML =
-                        `This problem does not have an editorial.
-                         <a href="/problem/${problemId}">Back to problem</a>`;
-                }
-                editorial.classList.remove("hidden");
-            });
+    fetch("/api/problem?id=" + problemId).then(b => b.text())
+            .then(b => JSON.parse(b)).then(b => {
+        if (b["status"] !== "success") {
+            console.log(`API fail: status: ${b["status"]}, message: ${b["message"]}`);
+            return;
+        }
+        if (b["editorial"] != "") {
+            inject(editorial, b["editorial"], false);
+        } else {
+            editorial.innerHTML =
+                `This problem does not have an editorial.
+                 <a href="/problem/${problemId}">Back to problem</a>`;
+        }
+        editorial.classList.remove("hidden");
+    });
 </script>
 {% endblock %}
