--- a/src/templates/admin/editannouncement.html
+++ b/src/templates/admin/editannouncement.html
@@ -4,7 +4,7 @@
 {% block active %}Admin Console{% endblock %}
 
 {% block preload %}
-<link rel="preload" href="/api/announcement/{{ request.path.split('/')[3] }}" as="fetch" crossorigin="anonymous">
+<link rel="preload" href="/api/announcements?id={{ request.path.split('/')[3] }}" as="fetch" crossorigin="anonymous">
 {% endblock %}
 
 {% block main %}
@@ -41,10 +41,14 @@
     }
     description.addEventListener('input', update);
 
-    fetch("/api/announcement/" + announcementId).then(b => b.text())
-        .then(b => {
-            description.value = b;
-            update();
-        });
+    fetch("/api/announcements?id=" + announcementId).then(b => b.text())
+            .then(b => JSON.parse(b)).then(b => {
+        if (b["status"] !== "success") {
+            console.log(`API fail: status: ${b["status"]}, message: ${b["message"]}`);
+            return;
+        }
+        description.value = b["data"][announcementId];
+        update(); 
+    });
 </script>
 {% endblock %}
