--- a/src/templates/contest/edit.html
+++ b/src/templates/contest/edit.html
@@ -4,7 +4,7 @@
 {% block active %}Contests{% endblock %}
 
 {% block preload %}
-<link rel="preload" href="/api/contest/{{ request.path.split('/')[2] }}" as="fetch" crossorigin="anonymous">
+<link rel="preload" href="/api/contests?id={{ request.path.split('/')[2] }}" as="fetch" crossorigin="anonymous">
 {% endblock %}
 
 {% block main %}
@@ -79,9 +79,13 @@
         formEnd.value = end;
     }
 
-    fetch("/api/contest/" + contestId).then(b => b.text())
-        .then(b => {
-            description.value = b;
+    fetch("/api/contests?id=" + contestId).then(b => b.text())
+        .then(b => JSON.parse(b)).then(b => {
+            if (b["status"] !== "success") {
+                console.log(`API fail: status: ${b["status"]}, message: ${b["message"]}`);
+                return;
+            }
+            description.value = b["data"][contestId];
             update();
         });
 </script>
