--- a/src/templates/contest/edit_problem.html
+++ b/src/templates/contest/edit_problem.html
@@ -4,8 +4,7 @@
 {% block active %}Contests{% endblock %}
 
 {% block preload %}
-<link rel="preload" href="/api/contest/{{ request.path.split('/')[2] }}/problem/description/{{ request.path.split('/')[4] }}" as="fetch" crossorigin="anonymous">
-<link rel="preload" href="/api/contest/{{ request.path.split('/')[2] }}/problem/hints/{{ request.path.split('/')[4] }}" as="fetch" crossorigin="anonymous">
+<link rel="preload" href="/api/contest/problem/description?cid={{ request.path.split('/')[2] }}&pid={{ request.path.split('/')[4] }}" as="fetch" crossorigin="anonymous">
 {% endblock %}
 
 {% block main %}
@@ -80,16 +79,16 @@
     }
     hints.addEventListener('input', updateHints);
 
-    fetch(`/api/contest/${contestId}/problem/description/${problemId}`).then(b => b.text())
-        .then(b => {
-            description.value = b;
-            updateDescription();
-        });
-
-    fetch(`/api/contest/${contestId}/problem/hints/${problemId}`).then(b => b.text())
-        .then(b => {
-            hints.value = b;
-            updateHints();
-        });
+    fetch(`/api/contest/problem?cid=${contestId}&pid=${problemId}`).then(b => b.text())
+            .then(b => JSON.parse(b)).then(b => {
+        if (b["status"] !== "success") {
+            console.log(`API fail: status: ${b["status"]}, message: ${b["message"]}`);
+            return;
+        }
+        description.value = b["data"]["description"];
+        updateDescription();
+        hints.value = b["data"]["hints"];
+        updateHints();
+    });
 </script>
 {% endblock %}
