--- a/src/templates/contest/create_problem.html
+++ b/src/templates/contest/create_problem.html
@@ -64,6 +64,16 @@
     </div>
     <input class="form-control mb-3" name="category" placeholder="Category" required>
     <input class="form-control mb-3" name="flag" placeholder="Flag" required>
+    <div class="mb-3 toggle-input">
+        <div>
+            <span>Manual</span>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="toggle-flag-hint" checked>
+            </div>
+            <span>Automatic</span>
+        </div>
+        <input class="form-control" name="flag-hint" placeholder="Flag Hint" readonly>
+    </div>
     <input class="form-control mb-3" type="file" id="file" name="file" accept=".zip">
     <div class="form-control mb-3" style="border: 0;">
         <input type="checkbox" id="draft" name="draft">
@@ -75,6 +85,24 @@
 {% endblock %}
 {% block script %}
 <script>
+    let autoFlagHint = true;
+    function updateFlagHint() {
+        if (!autoFlagHint) return;
+        let flag = document.querySelector("input[name=flag]").value;
+        const regex = /^(.*\{).+\}$/;
+        if (regex.test(flag)) {
+            document.querySelector("input[name=flag-hint]").value = flag.replace(regex, "$1...}");
+        } else {
+            document.querySelector("input[name=flag-hint]").value = "";
+        }
+    }
+    document.getElementById("toggle-flag-hint").addEventListener("input", function() {
+        autoFlagHint = !autoFlagHint;
+        document.querySelector("input[name=flag-hint]").toggleAttribute("readonly");
+        updateFlagHint();
+    });
+    document.querySelector("input[name=flag]").addEventListener("input", updateFlagHint);
+
     document.getElementById("description-out").attachShadow({mode: "open"});
     document.getElementById("hints-out").attachShadow({mode: "open"});
     document.getElementById("description").addEventListener("input", function() {
