--- a/src/templates/error/500.html
+++ b/src/templates/error/500.html
@@ -4,6 +4,6 @@
 
 {% block main %}
 <h1>Internal Server Error</h1>
-An unexpected error occured and the server was unable to process your request.
+An unexpected error occurred and the server was unable to process your request.
 <a href="/">Back to Home</a>
 {% endblock %}
